--- a/src/app.css
+++ b/src/app.css
@@ -6,7 +6,6 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -24,18 +23,14 @@
   --deleteButtonBgColor: lightslategray;
   --deleteButtonHoverBgColor: rgb(72, 69, 69);
   --deleteButtonActiveBgColor: darkgray;
+  --textColor: #213547;
   --blockSpace: 12px;
   --rowCount: 7;
   --itemHeight: calc((var(--todoCardHeight) - 3 * var(--blockSpace)) / var(--rowCount));
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+body {
+  background-color: lightsteelblue;
 }
 
 body {
@@ -46,15 +41,6 @@ body {
   min-height: 100vh;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-.card {
-  padding: 2em;
-}
-
 #app {
   max-width: 1280px;
   margin: 0 auto;
@@ -63,34 +49,11 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: rgba(141, 155, 168, 0.75);
-    /* background-color: #ffffff; */
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
